[package]
name = "wordcount"
version = "0.1.0"
authors = ["DenTaku <dentaku1412@gmail.com>"]
edition = "2018"

license = "MIT OR Apache-2.0"
description = "シンプルな文字、単語、行の出現頻度の計数機能を提供します。"
readme = "README.md"
repository = "https://github.com/den-taku/wordcount"
categories = ["command-line-utilities"]
kerwords = ["example", "frequency", "text"]


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
regex = "1.0"
